--- a/src/MainApp/App.css
+++ b/src/MainApp/App.css
@@ -52,10 +52,12 @@ html {
 .blog-form1 {
   font-size: 1.5rem;
   font-weight: 700;
+  text-align: center;
 }
 
 .title1 {
   display: flex;
+  justify-content: center;
   margin: 1rem;
   width: 100%;
   color: #fffffe;
@@ -65,9 +67,10 @@ html {
   margin-left: 1rem;
   font-size: 1rem;
   width: 70%;
+  height: 2rem;
   padding: 0.2rem;
   border: none;
-  border-radius: 0.2rem;
+  border-radius: 0.5rem;
   background-color: #94a1b2;
   color: #16161a;
 }
@@ -76,7 +79,7 @@ html {
   width: 100%;
   font-size: 1rem;
   border: none;
-  border-radius: 0.2rem;
+  border-radius: 0.5rem;
   background-color: #94a1b2;
   color: #16161a;
 }
@@ -141,9 +144,10 @@ html {
   width: 100%;
   font-size: 1rem;
   border: none;
-  border-radius: 0.2rem;
+  border-radius: 0.5rem;
   background-color: #94a1b2;
   color: #16161a;
+  height: 2rem;
 }
 
 .cont-button {
