--- a/src/MainApp/BlogCmsApp/BlogCmsApp.css
+++ b/src/MainApp/BlogCmsApp/BlogCmsApp.css
@@ -107,27 +107,27 @@
 
   .active-col {
     width: 60%;
-    min-height: 60vh;
+  }
+
+  .cms-active-blog{
+    min-height: 90vh;
+    margin-bottom: 3rem;
+    padding: 2rem;
+    display: flex;
+    background-color: #16161a;
+    border-radius: 1rem;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
   }
   
   .cms-active {
     position: relative;
     width: 100%;
     min-height: 60vh;
-    background-color: #16161a;
-    border-radius: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-  }
-  
-  .cms-active-blog{
-    min-height: 60vh;
-    margin-bottom: 3rem;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
     align-items: center;
   }
   
